2011-01-17  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #16062: <label> for "Mark entries with missing files as deleted" in Media/Tool/Check index (Thanks to Christian Weiske)

2011-01-16  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #16543: batch edit not working in Typo3 4.5 (Thanks to Lorenz Ulrich)

2010-12-09  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #16390: DAM floods deprecation log by using $ICON_TYPES  (Thanks to Uschi Renziehausen)

2010-11-07  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #15651: Table fields in extension manager (Thanks Chris Mueller)
	* Upgrade version number in ext_emconf.php

2010-11-06  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #15566: When trying to edit a media link in the RTE, the external url tab is activated (Thanks Stanislas Rolland)

2010-08-21  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #15099: Bugfix: "Reference to main window is not set properly" after selecting an uploaded file in RTE link dialogue (Thanks to Lorenz Ulrich)

2010-08-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #12525: database column is not DBAL-compatible

2010-08-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Added feature #15283: Add copy and move operations for files in the context menu

2010-07-11  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #13555: Bug: tt_content table is hard-coded in tx_dam_tsfe::fetchFileList() (Thanks to Francois Suter)
	* Fix #13271: Bug: DAM does not recognise ogv as video (Thanks to Lorenz Ulrich)

2010-07-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #14853: Remove all translations from DAM
	* Fixed bug #11821: Deleting an unused file gives a "file used" warning
	* Fixed bug #14434: SQL error when creating tables

2010-06-26  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #10936: TSconfig indexing.replaceFile.reindexingMode has no effect (Thanks to Francois Suter)
	* Fix #13884: Cleanup: Duplicate title attribute in img tag in element browser (Thanks to Chris Mueller)
