@@ -1,3 +1,6 @@
+2011-01-18  Dan Osipov <dosipov@phillyburbs.com>
+	* Fix #13676: Showing meta information in workspace view (Thanks Chris Mueller)
+
 2011-01-17  Lorenz Ulrich <lorenz.ulrich@visol.ch>
 	* Fix #16062: <label> for "Mark entries with missing files as deleted" in Media/Tool/Check index (Thanks to Christian Weiske)
 
